--- a/src/collectd.conf.in
+++ b/src/collectd.conf.in
@@ -2001,6 +2001,7 @@
 
 #<Plugin write_influxdb_udp>
 #  Server "localhost"
+#  TimePrecision "ms"
 #  StoreRates true
 #  MaxPacketSize 32768
 #  TimeToLive 128
